--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Contact us at Moon Boots</h1>
 <p>Call us at this phone number</p>
-
+<footer><a href="index.html">Home</a></footer>
 </body>
 </html>
