--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -10,6 +10,7 @@
 	<li>Useful for the moon</li>
 	<li>The go on feet</li>
 </ul>
-
+<img src="images/moon_bootz.jpg" alt="moon boots" />
+<footer><a href="index.html">Home</a></footer>
 </body>
 </html>
