--- a/html/moon_bootz/table-practice.html
+++ b/html/moon_bootz/table-practice.html
@@ -22,5 +22,25 @@
 		<td>Yeti SB6c</td>
 	</tr>
 </table>
+<table>
+	<tr>
+		<th>Park</th>
+		<th>Campsite</th>
+		<th>Hours Away</th>
+	</tr>
+	<tr>
+		<td colspan="2">Devils Lake</td>
+		<td rowspan="2">4</td>
+	</tr>
+	<tr>
+		<td>Picture Rocks Iowa</td>
+		<td>Nearby RV park</td>
+	</tr>
+	<tr>
+		<td>Red River Gorge</td>
+		<td>Miguels Pizza</td>
+		<td>6.5</td>
+	</tr>
+</table>
 </body>
 </html>
