added changes to index.html

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Title goes here</title>
 </head>
 <body>
+<main>
+	<p>This is where the bulk of the information we will be sharing will live.</p>
+</main>
+<article>
+<header>
+<h1>The title of the article, also located in the header</h1>
+</header>
+<section>
+	<h2>Title for this section</h2>
+	<p>This is the article tag, commonly used for forms, blogs, and magazine</p>
+</section>	
+<section>
+	<h3>Title for this section</h3>
+	<p>Here we can put some additional comments that are part of the article but seperate from the top section</p>
+</section>
+<aside>
+	<p>Here would be something tangentially related</p>
+</aside>
+<table>
+	<tr>
+		<th>head1</th>
+		<th>head2</th>
+		<th>head3</th>
+	</tr>
+	<tr>
+		<td rowspan="2">big thing</td>
+		<td>thing2</td>
+		<td>thing3</td>
+	</tr>
+	<tr>
+		<td>thing4</td>
+		<td>thing5</td>
+	</tr>
+</table>
+</article>
+
+<nav>
+	<ul>
+		<li><a href="page1.html">page 1</a></li>
+		<li><a href="page2.html">page 2</a></li>
+	</ul>
+</nav>
+<footer>This is a footer at the bottom</footer>
 
 </body>
 </html>
+<!--
+What is the purpost of HTML5 semantic tags? Which ones do you see as most useful?
+Sematic tags add meaning to the content and improve readability, including for people with disabilities.
+Nav is very useful for navigating through a multipage website. Article and section tags distguish different parts of the webpage for easier comprehension
+
+What is the order the browser uses to display elements on a page?
+Browsers display elements on a webpage from top to bottom. For example, a header at the bottom of an html page would display at the bottom of a web page.
+
+What did you learn about Sublime in this challenge? 
+Snippets are very useful and easy to create when repeating the same lines of code.
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+I didn't find too much challenging, but I want to spend some more time on the mozilla web page to read up on the propper use of semantic tags.
