--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -6,10 +6,15 @@
 	<link rel"stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Dress the Octopus</h1>
-<img src="octopus.png">
-<img src="hat.png">
-<img src="glasses.png">
-
+	<h1>Dress the Octopus</h1>
+	<div class="octopus">
+		<img src="octopus.png">
+	</div>
+	<div class="hat">	
+		<img src="hat.png">
+	</div>
+	<div class="glasses">	
+		<img src="glasses.png">
+	</div>
 </body>
 </html>
