added octopus styles and glasses

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -3,18 +3,20 @@
 <head>
 	<title>Dress the Octopus</title>
 	<meta charset="UTF-8">
-	<link rel"stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Dress the Octopus</h1>
-	<div class="octopus">
-		<img src="octopus.png">
-	</div>
-	<div class="hat">	
-		<img src="hat.png">
-	</div>
-	<div class="glasses">	
-		<img src="glasses.png">
+	<div class="wrapper">
+		<div class="octopus">
+			<img src="octopus.png" alt="octopus">
+		</div>
+		<div class="hat">	
+			<img src="hat.png" alt="hat">
+		</div>
+		<div class="glasses">	
+			<img src="glasses.png" alt="glasses">
+		</div>
 	</div>
 </body>
 </html>
