--- a/web_dev/jquery/bike_ride.html
+++ b/web_dev/jquery/bike_ride.html
@@ -3,10 +3,13 @@
 <head>
 	<title>Climb the mountain with your bike!</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<
+
 </head>
 <body>
-	<h1>Click on the screen to make the bike go!</h1>
+	<h1>Click on the bike to make the bike go!</h1>
+	<div>
+		<img src="bike.png" style="width:128px;height:128px;">
+	</div>
 
 
 </body>
