fade in bike functional

--- a/web_dev/jquery/bike_ride.html
+++ b/web_dev/jquery/bike_ride.html
@@ -2,15 +2,14 @@
 <html>
 <head>
 	<title>Climb the mountain with your bike!</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 <body>
-	<h1>Click on the bike to make the bike go!</h1>
-	<div>
+	<h1>Watch the bike fade in and out!</h1>
+	<div id="bike">
 		<img src="bike.png" style="width:128px;height:128px;">
 	</div>
 
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="jquery.js"></script>
 </body>
 </html>
